Uploaded image for project: 'ActiveMQ C++ Client'
  1. ActiveMQ C++ Client
  2. AMQCPP-596

decaf/internal/security/provider/crypto/MD4MessageDigestSpi.cpp:394]: (error) Mismatching allocation and deallocation: temp

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Minor
    • Resolution: Fixed
    • 3.9.0, 3.9.1, 3.9.2, 3.9.3
    • 3.9.4
    • None
    • None

    Description

      temp = new unsigned char[length];
      input.get(temp, length, 0, length);
      engineUpdate(temp, length, 0, length);
      delete temp;

      Wrong delete. Suggest use delete [].

      Also, some possible duplicates:

      [decaf/internal/security/provider/crypto/MD5MessageDigestSpi.cpp:441]: (error) Mismatching allocation and deallocation: temp
      [decaf/internal/security/provider/crypto/SHA1MessageDigestSpi.cpp:333]: (error) Mismatching allocation and deallocation: temp

      Attachments

        Activity

          People

            tabish Timothy A. Bish
            dcb David Binderman
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: