https://issues.apache.org/jira/browse/AMQCPP-596

Use proper array delete operator.