activemq-cpp/src/main/decaf/internal/security/provider/crypto/SHA1MessageDigestSpi.cpp
@@ -330,7 +330,7 @@ void SHA1MessageDigestSpi::engineUpdate(decaf::nio::ByteBuffer& input) {
         temp = new unsigned char[length];
         input.get(temp, length, 0, length);
         engineUpdate(temp, length, 0, length);
-        delete temp;
+        delete [] temp;
     }
 }
 
